--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,71 @@
+attrs==19.3.0
+backcall==0.1.0
+bleach==1.5.0
+boto==2.49.0
+boto3==1.10.36
+botocore==1.13.36
+certifi==2019.11.28
+chardet==3.0.4
+decorator==4.4.1
+defusedxml==0.6.0
+docutils==0.15.2
+entrypoints==0.3
 enum34==1.1.6
-requests==2.18.4
-scipy==1.0.0
-tensorflow-tensorboard==0.4.0
-numpy==1.14.0
-termcolor==1.1.0
-tensorflow==1.4.0
 gensim==3.1.0
+html5lib==0.9999999
+idna==2.6
+importlib-metadata==1.3.0
+ipykernel==5.1.3
+ipython==7.10.1
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jedi==0.15.1
+Jinja2==2.10.3
+jmespath==0.9.4
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==5.3.4
+jupyter-console==6.0.0
+jupyter-core==4.6.1
+Markdown==3.1.1
+MarkupSafe==1.1.1
+mistune==0.8.4
+more-itertools==8.0.2
+nbconvert==5.6.1
+nbformat==4.4.0
 nltk==3.2.5
-
+notebook==6.0.2
+numpy==1.14.0
+pandocfilters==1.4.2
+parso==0.5.1
+pexpect==4.7.0
+pickleshare==0.7.5
+pkg-resources==0.0.0
+prometheus-client==0.7.1
+prompt-toolkit==2.0.10
+protobuf==3.11.1
+ptyprocess==0.6.0
+Pygments==2.5.2
+pyrsistent==0.15.6
+python-dateutil==2.8.0
+pyzmq==18.1.1
+qtconsole==4.6.0
+requests==2.18.4
+s3transfer==0.2.1
+scipy==1.0.0
+Send2Trash==1.5.0
+six==1.13.0
+smart-open==1.9.0
+tensorflow==1.4.0
+tensorflow-tensorboard==0.4.0
+termcolor==1.1.0
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.0.3
+traitlets==4.3.3
+urllib3==1.22
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.16.0
+widgetsnbextension==3.5.1
+zipp==0.6.0
